@@ -383,7 +383,8 @@ public:
   float RotationFromStageMatrices(ScaleMat curMat, ScaleMat mapMat, BOOL &inverted);
   int AccessMapFile(CMapDrawItem * item, KImageStore *&storeMRC, int & curStore, MontParam *&montP, 
     float & useWidth, float & useHeight, bool readWrite = false);
-  int RealignToCurrentItem(BOOL restore);
+  int RealignToCurrentItem(BOOL restore, float resetISalignCrit, 
+    int maxNumResetAlign, int leaveZeroIS);
   void GetAdjustedStagePos(float & stageX, float & stageY, float & stageZ);
   void ShiftToMarker(void);
   void UndoShiftToMarker(void);
@@ -393,8 +394,10 @@ public:
   CButton m_butRealign;
   afx_msg void OnRealigntoitem();
   int GetCurrentOrAcquireItem(CMapDrawItem *&item);
-  int RealignToOtherItem(int index, BOOL restore);
-  int RealignToAnItem(CMapDrawItem * item, BOOL restore);
+  int RealignToOtherItem(int index, BOOL restore, float resetISalignCrit, 
+    int maxNumResetAlign, int leaveZeroIS);
+  int RealignToAnItem(CMapDrawItem * item, BOOL restore, float resetISalignCrit, 
+    int maxNumResetAlign, int leaveZeroIS);
   CMapDrawItem * GetOtherNavItem(int index);
   BOOL mMovingStage;
   BOOL StartedMacro(void);
